fix: previous and next post text alignment

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -255,6 +255,10 @@ table td {
     max-width: 50%;
 }
 
+.flex-space-fill {
+    flex: auto;
+}
+
 h2 {
     margin: .5rem 0;
 }
